# jinja-filters

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.md  LICENSE.txt  License.txt  README.rst  RELEASE.md  invoke.yaml  pyproject.toml  setup.py  tasks.py
.github/workflows/: main.yml
minchin/pelican/jinja_filters/: __init__.py  filters.py
pelican/plugins/jinja_filters/: __init__.py  jinja_filters.py
test/: test_article_date.py  test_breaking_spaces.py  test_datetime.py  test_datetime_from_period.py  test_merge_date_url.py  test_setup.py  test_titlecase.py
