[tool.poetry]
name = "pelican-jinja-filters"
version = "2.1.1"
description = "Pelican plugin for applying useful Jinja filters in theme templates"
authors = ["William Minchin <w_minchin@hotmail.com>", "Justin Mayer <entroP@gmail.com>"]
license = "MIT"
readme = "README.rst"
keywords = ["jinja2", "templates", "pelican", "plugin"]
repository = "https://github.com/pelican-plugins/jinja-filters"
documentation = "https://github.com/pelican-plugins/jinja-filters/blob/master/README.rst"
packages = [
    { include = "pelican" },
]
include = [
    "README.rst",
    "LICENSE.txt",
    "CHANGELOG.rst",
    "CONTRIBUTING.md",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Bug Tracker" = "https://github.com/pelican-plugins/jinja-filters/issues"
"Changelog" = "https://github.com/pelican-plugins/jinja-filters/blob/master/CHANGELOG.rst"

[tool.poetry.dependencies]
python = "^3.6.2 || ^3.7"
pelican = "^3 || ^4"
markdown = {version = "^3.2", optional = true}
titlecase = "^1.1.1 || ^2"

[tool.poetry.dev-dependencies]
black = {version = "^21.6b0", allow-prereleases = true}
flake8 = "^3.8"
flake8-black = "^0.2"
invoke = "^1.3"
isort = "^5.4"
livereload = "^2.6"
markdown = "^3.2"
Werkzeug = "^1.0"
pytest = "^6.0"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
project-name = "Jinja Filters"
git-username = "botpub"
git-email = "botpub@autopub.rocks"
changelog-file = "CHANGELOG.rst"
version-strings = ["pelican/plugins/jinja_filters/__init__.py"]
changelog-header = "======================="
version-header = "-"

[tool.isort]
# Maintain compatibility with Black
profile = "black"

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" as separate import section
known_pelican = "pelican"
sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
